# gauss_splats

./: CMakeLists.txt  README.md  install_opengl.sh
.devcontainer/: Dockerfile  devcontainer.json
include/: camera.hpp  cuda_helpers.hpp  gaussian.hpp  gs.hpp  gs_small.hpp  render_utils.hpp
src/: camera.cpp  camera_gpu.cu  cuda_helpers.cu  gaussian.cu  gs.cu  gs_small.cu  hello_cuda.cu  main.cu  main_interactive_splats.cu  main_train.cu  ply_loader.cpp  ply_utils.cu  render_utils.cu  sdl_utils.cu
